--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
   <button id="btn">compute</button>
 
   <p id="result"></p>
+  <p>
+    Insert the information in the form and the calculator will determine the length<br> 
+    What is the length converter?<br>
+    The length converter is a tool that converts between metric, imperial and other units.<br>
+    Why use length converter?<br>
+    The length converter is used in order to convert between metric, imperial and other units.<br>
+</p>
   <script src="app.js"></script>
 </body>
 </html>
